assets/Style.css
/* Michael Osgood / To Do List */
body {
	background-color: #D4D4D4;
	color: #000000;
}

#wrapper {
	width: 95%;
	font-family: 'Limelight', cursive;
	font-size: 18px;
}

.btn {
	background-color: #d3d3d3;
	color: #000000;
}

.form-control {
	background-color: #F8F8FF;
}

footer {
	font-size: 20px;
	text-align: center;
	background: #F8F8FF;
	border-top: 1px solid #000000;
	font-family: 'Limelight', cursive;
	height: 60px;
  }

